--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -1,7 +1,7 @@
-<h1>Getting Started with Ruby</h1>
+<h1>Welcome to Xia Laoshi's page!</h1>
 
 <p>
-  Welcome!
+  Hello, my dear student!
 </p>
 
 <pre>
