--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -4,7 +4,7 @@
   Hello, my dear student!
 </p>
 
-<%= link_to 'Widgets', widgets_path %>
+<%= link_to '管理', students_path %>
 
 <pre>
 <%= Cowsay.say("Hello") %>
